--- a/index.html
+++ b/index.html
@@ -48,7 +48,13 @@
     </div>
 
     <p id="action-message">Make your move</p>
-    <button class="reset" onclick="restart()">Reset</button>
+
+    <div class="container">
+        <div class="center">
+            <button class="reset" onclick="restart()">Reset</button>
+        </div>
+    </div>
+    
     </main>
     <script src="assets/js/main.js"></script>
 </body>
